tests/pos/idNat.hs
module IdNat where 

{-@ nat :: Nat @-}
nat :: Int
nat = id (id (id (id (id 0))))
