tests/neg/ReWrite6.hs
module ReWrite6 where

{-@ rewrite bad @-}
{-@ bad :: {1 < 2} @-}
bad :: ()
bad = ()
